--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 	<div id= "questionblock"></div>
 	<div id= "answerblock"></div>
 	<button class ="btn btn-success" id ="start">Like, Totally Start The Game</button><br>
-	<button class="btn btn-success" id="reset">Play Again?</button>
+	<button class="btn btn-success" id="reset">Try Again?</button>
 </div>
-
 
 </body>
 </html>
